--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Category</h1>
 <%= link_to 'Go back to list', categories_path %>
 <hr>
-<%= form_with scope: :category, url: create_category_path, local: true do |f| %>
+<%= form_with model: @category do |f| %>
     
     <p>
         <% if @category.errors.any? %>
